--- a/templates/ajax/office/purchase_bill_ajax.html
+++ b/templates/ajax/office/purchase_bill_ajax.html
@@ -82,15 +82,15 @@
     <div class="other_charges_box" >
         <div class="other_charges">
             <div class="lable">हमाली</div>
-            <div class="containt"> <input type="number" value="0" class="check_zero1" name="hamali" id="हमाली" oninput="total_amount_calculate('{{total_item_amount}}'),check_zero('हमाली')"  required> </div>
+            <div class="containt"> <input type="number" value="" class="check_zero1" name="hamali" id="हमाली" oninput="total_amount_calculate('{{total_item_amount}}'),check_zero('हमाली')"  required> </div>
         </div>
         <div class="other_charges">
             <div class="lable">तोलाई</div>
-            <div class="containt"> <input type="number" value="0" class="check_zero2" name="tolai" id="तोलाई" oninput="total_amount_calculate('{{total_item_amount}}'),check_zero('तोलाई')" required> </div>
+            <div class="containt"> <input type="number" value="" class="check_zero2" name="tolai" id="तोलाई" oninput="total_amount_calculate('{{total_item_amount}}'),check_zero('तोलाई')" required> </div>
         </div>
         <div class="other_charges">
     <div class="lable">आडत</div>
-    <div class="containt"> <input type="number" name="aadat" value="0" class="check_zero3" id="आडत" oninput="total_amount_calculate('{{total_item_amount}}'),check_zero('आडत')"  required> </div>
+    <div class="containt"> <input type="number" name="aadat" value="" class="check_zero3" id="आडत" oninput="total_amount_calculate('{{total_item_amount}}'),check_zero('आडत')"  required> </div>
 </div>
 <div class="other_charges">
     <div class="lable">शेअर्स</div>
