--- a/templates/office/completed_view_sell_bill.html
+++ b/templates/office/completed_view_sell_bill.html
@@ -133,6 +133,10 @@ a{
     }
 </style>
 
+<div class="hide">
+    <div class="text-center"><b></b></div>
+    <hr>
+</div>
 
 <div id="canvse">
 <div class="bill_box">
