--- a/templates/office/completed_view_sell_bill.html
+++ b/templates/office/completed_view_sell_bill.html
@@ -105,7 +105,7 @@ a{
         
     }
     .hide{
-        display: none;
+        display: none !important;
     }
     .date{
         font-size: 12px;
@@ -133,15 +133,11 @@ a{
     }
 </style>
 
-<div class="hide">
-    <div class="text-center"><b></b></div>
-    <hr>
-</div>
-
 <div id="canvse">
 <div class="bill_box">
     <div class="header">
         <div class="bill_main_header">
+            <div class="text-center">विक्री बिल</div>
             <div class="shope_name"><b>{{order_master.shope.shope_name}}</b></div>
             <div class="description"><p>{{order_master.shope.description}}</p></div>
             <div class="address">{{order_master.shope.address}}</div>
@@ -152,17 +148,17 @@ a{
             <div class="date">दिनांक  - {{order_master.ordered_date}}</div>
         </div>
         
-        {% if order_master.farmer_id == None %}
+        {% if order_master.customer_id == None %}
         
         <div class="customer_box">
-            <div class="customer_name">नांव - {{order_master.farmer.id}}</div>
+            <div class="customer_name">नांव - {{order_master.customer.id}}</div>
             <div class="customer_mobile">मोबाइल - </div>
         </div>
         {% else %}
         
         <div class="customer_box">
-            <div class="customer_name">नांव - {{order_master.farmer.name}}</div>
-            <div class="customer_mobile">मोबाइल - {{order_master.farmer.mobile}}</div>
+            <div class="customer_name">नांव - {{order_master.customer.name}}</div>
+            <div class="customer_mobile">मोबाइल - {{order_master.customer.mobile}}</div>
         </div>
         {% endif %}
     </div>
@@ -216,21 +212,9 @@ a{
 <br>
 <div class="text-center hide " style="display: flex;justify-content: space-evenly;">
     <div> <button class="btn btn-primary " onclick="window.print()">Print</button></div>
-    <div> <a href="/office/genereate_purchase_bill_image/{{order_master.order_filter}}" class="btn btn-success " onclick="download_img()"><i class="fa fa-download" aria-hidden="true"></i></a></div>
+    <div> <a href="/office/genereate_sell_bill_image/{{order_master.order_filter}}" class="btn btn-success " onclick="download_img()"><i class="fa fa-download" aria-hidden="true"></i></a></div>
 </div>
 
 
-<script>
-    function download_img(){
-        var canvas = document.getElementById("canvse");
-        domtoimage.toJpeg(canvas).then((data)=>{
-            var link =  document.createElement("a");
-            link.download = '{{bill.farmer.name}} '+ new Date().toLocaleString() +' .jpeg';
-            link.href = data;
-            link.click();
-        });
 
-
-    }
-</script>
 {% endblock content %}
