--- a/templates/office/genereate_sell_bill_image.html
+++ b/templates/office/genereate_sell_bill_image.html
@@ -105,7 +105,7 @@ a{
 <div class="bill_box">
     <div class="header">
         <div class="bill_main_header">
-            <div class="text-center">खरेदी बिल</div>
+            <div class="text-center">विक्री बिल</div>
             <div class="shope_name"><b>{{order_master.shope.shope_name}}</b></div>
             <div class="description"><p>{{order_master.shope.description}}</p></div>
             <div class="address">{{order_master.shope.address}}</div>
@@ -116,17 +116,17 @@ a{
             <div class="date">दिनांक  - {{order_master.ordered_date}}</div>
         </div>
         
-        {% if order_master.farmer_id == None %}
+        {% if order_master.customer_id == None %}
         
         <div class="customer_box">
-            <div class="customer_name">नांव - {{order_master.farmer.id}}</div>
+            <div class="customer_name">नांव - {{order_master.customer.id}}</div>
             <div class="customer_mobile">मोबाइल - </div>
         </div>
         {% else %}
         
         <div class="customer_box">
-            <div class="customer_name">नांव - {{order_master.farmer.name}}</div>
-            <div class="customer_mobile">मोबाइल - {{order_master.farmer.mobile}}</div>
+            <div class="customer_name">नांव - {{order_master.customer.name}}</div>
+            <div class="customer_mobile">मोबाइल - {{order_master.customer.mobile}}</div>
         </div>
         {% endif %}
     </div>
@@ -184,11 +184,11 @@ a{
         var canvas = document.getElementById("canvse");
         domtoimage.toJpeg(canvas).then((data)=>{
             var link =  document.createElement("a");
-            link.download = '{{order_master.farmer.name}} '+ new Date().toLocaleString() +' .jpeg';
+            link.download = '{{order_master.customer.name}} '+ new Date().toLocaleString() +' .jpeg';
             link.href = data;
             link.click();
             
-            location.href = "{% url 'completed_view_purchase_bill' order_master.order_filter %}";
+            location.href = "{% url 'completed_view_sell_bill' order_master.order_filter %}";
 
         });
 </script>
